Crash: Renaming bone through outliner in object mode crashes Blender #56920

Closed
opened 2018-09-25 19:24:47 +02:00 by Arnold Konrad · 5 comments

System Information
Ubuntu 18.04 64bit / AMD Ryzen 1700X / Geforce GTX 1060 6GB

Blender Version
BuildBot version 2abbe1d125
Git build revision 0f652a1ec0

Short description of error
Renaming bone through outliner in edit mode crashes Blender

Exact steps for others to reproduce the error
Double-click the single bone contained in the attached .blend file in the outliner and try to rename it -> crashes every time.
Must be in object mode, edit mode works fine!

Bone_Rename_Crash.blend
Bone_Rename_Crash.crash.txt

**System Information** Ubuntu 18.04 64bit / AMD Ryzen 1700X / Geforce GTX 1060 6GB **Blender Version** BuildBot version 2abbe1d125f Git build revision 0f652a1ec07 **Short description of error** Renaming bone through outliner in edit mode crashes Blender **Exact steps for others to reproduce the error** Double-click the single bone contained in the attached .blend file in the outliner and try to rename it -> crashes every time. Must be in object mode, edit mode works fine! [Bone_Rename_Crash.blend](https://archive.blender.org/developer/F4815255/Bone_Rename_Crash.blend) [Bone_Rename_Crash.crash.txt](https://archive.blender.org/developer/F4815258/Bone_Rename_Crash.crash.txt)
Author

Added subscriber: @ArnoldKonrad

Added subscriber: @ArnoldKonrad
Arnold Konrad changed title from Renaming bone through outliner in edit mode. to Crash: Renaming bone through outliner in edit mode crashes Blender 2018-09-25 19:25:10 +02:00

Added subscriber: @antoniov

Added subscriber: @antoniov

The error is because the bone name is NULL in draw_armature_pose()

The error is because the bone name is NULL in draw_armature_pose()
Antonio Vazquez self-assigned this 2018-09-26 12:51:30 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed with 2e9b86923c

Fixed with 2e9b86923c30
Antonio Vazquez changed title from Crash: Renaming bone through outliner in edit mode crashes Blender to Crash: Renaming bone through outliner in object mode crashes Blender 2018-09-26 13:14:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56920
No description provided.