Fix T56920: Crash: Renaming bone through outliner